@@ -4,6 +4,7 @@ build_dir=`cd $(dirname $0) && pwd`
 src_dir=`cd $build_dir && cd @top_srcdir@ && pwd`
 
 export PYTHONPATH=$src_dir${PYTHONPATH:+:$PYTHONPATH}
+export FLU_PROJECT_PATH=$src_dir${FLU_PROJECT_PATH:+:${FLU_PROJECT_PATH}}
 export PKG_CONFIG_PATH=$src_dir/pkgconfig${PKG_CONFIG_PATH:+:$PKG_CONFIG_PATH}
 
 export PATH=$build_dir/bin:$PATH
